--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,7 +49,7 @@ nav {
 #view_btn {
   background-color: #febd69;
   padding: 0.4rem 1.8rem;
-  font-family: calibri;
+  font-family: sans-serif;
 }
 
 #cart {
