--- a/frontend/src/sass/_base.scss
+++ b/frontend/src/sass/_base.scss
@@ -7,17 +7,19 @@
 }
 body {
   box-sizing: border-box;
+  background-image: linear-gradient(to top left, rgba(#6FCFE5,0.8), rgba(#DFFF00,.1));
+  
 }
 
 body::-webkit-scrollbar {
-  width: 0.9em;
+  width: 0.6em;
 }
 body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.8);
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: $color-primary;
+  background-color: #454242;
   outline: 1px solid $color-primary;
   border-radius: 9%;
 }
@@ -47,4 +49,8 @@ html {
 ::selection {
   background-color: $color-primary;
   color: $base-color;
+}
+
+.main__container{
+  padding: 5rem;
 }
