--- a/frontend/src/sass/layout/_header.scss
+++ b/frontend/src/sass/layout/_header.scss
@@ -1,4 +1,29 @@
-
+.heading {
+  display: flex;
+  flex-wrap: wrap;
+  // justify-content: space-between;
+  align-items: center;
+  // gap: 6rem;
+}
+.logo {
+  flex-grow: 0.5;
+}
+.search {
+  flex-grow: 3;
+}
+.home__link{
+  &::after,
+  &::before,
+  &:visited,
+  &:hover{
+    text-decoration: none;
+  }
+}
+.cart {
+  flex-grow: 0.2;
+  display: flex;
+  gap: 1rem;
+}
 .logo__container {
   display: flex;
   &__logo {
@@ -8,8 +33,9 @@
   &__name {
     padding-left: 1rem;
     font-weight: 700;
-    color: white;
+    color: black;
     font-size: 2rem;
+    text-decoration: none;
   }
 }
 
