--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -3,4 +3,8 @@
 @import "./utilities";
 @import "./layout/header";
 @import "./pages/home";
+@import "./pages/dashboard";
+@import "./pages/product_desc";
+@import "./pages/user_profile";
+@import "./pages/cart";
 @import "./layout/footer";
